--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -55,7 +55,7 @@
     "jailulespoints":"J’ai lu les points ci-dessus et j’ai compris que cette application m’aidera à enregistrer mes observations quotidiennes au cours des cycles menstruels, mais ne peut absolument pas me suffire telle quelle pour éviter (ou favoriser) une grossesse. Je comprends que si tel était mon objectif, je devrais impérativement suivre une formation approfondie avec une monitrice spécialisée en méthode naturelle de régulation des naissances.",
 	"etape":"Etape",
 	"principeutilisation":"Principe d'utilisation",
-    "textinformation":"Information :<br>Kyklos, une application de suivi du cycle créée en 2022 par des médecins, présente les caractéristiques suivantes :<br>• Utilisable par n'importe quelle femme<br>• Spécialement adaptée aux filles pubères ou pré-pubères<br>• Utilisable hors ligne (données internes à l'application)<br>• Confidentielle : aucune connexion à un site de suivi, serveur ou base de données ; NE divulgue AUCUNE donnée à des tiers sans la connaissance de l'utilisateur*. N.B. Pour une confidentialité maximale dans la sphère numérique de ces données de santé intimes, il est préférable d'envoyer des PDF des cycles via Bluetooth ou messagerie chiffrée, et de les archiver sur un disque dur personnel plutôt que dans le Cloud.<br>• Gratuite<br>*Sans source de revenus ! Maintenez-la sur les magasins avec un don, merci ! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, onglet \"Aidez-nous\").<br><br><u>Fondements</u> : Drs G.D., B.deN., A.J. et d'autres, médecins et facilitateurs au CEPP/TeenSTAR France<br><u>Conception, mise en page et coordination</u> : A.J.<br><u>Illustrations</u> : Inès de Chefdebien (Paris)<br><u>Contact</u> : app@teenstar.fr<br><i>Tous droits réservés</i>",
+    "textinformation":"Kyklos, une application de suivi du cycle créée en 2022 par des médecins, présente les caractéristiques suivantes :<br>• Utilisable par n'importe quelle femme<br>• Spécialement adaptée aux filles pubères ou pré-pubères<br>• Utilisable hors ligne (données internes à l'application)<br>• Confidentielle : aucune connexion à un site de suivi, serveur ou base de données ; NE divulgue AUCUNE donnée à des tiers sans la connaissance de l'utilisateur*. <br>N.B. Pour une confidentialité maximale dans la sphère numérique de ces données de santé intimes, il est préférable d'envoyer des PDF des cycles via Bluetooth ou messagerie chiffrée, et de les archiver sur un disque dur personnel plutôt que dans le Cloud.<br>• Gratuite<br>*Sans source de revenus ! Maintenez-la sur les magasins avec un don, merci ! (<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a>, onglet \"Aidez-nous\").<br><br><u>Fondements</u> : Drs G.D., B.deN., A.J. et d'autres, médecins et facilitateurs au CEPP/TeenSTAR France<br><u>Conception, mise en page et coordination</u> : A.J.<br><u>Illustrations</u> : Inès de Chefdebien (Paris)<br><u>Contact</u> : app@teenstar.fr<br><i>Tous droits réservés</i>",
     "bienvenuesurkyklos":"Bienvenue sur Kyklos",
     "settings":"Réglages",
     "account":"Compte",
@@ -275,5 +275,25 @@
     "add_first_observation":"Ajoutez votre première observation !",
     "no_history":"Pas d'historique",
     "display_analyse":"Afficher l'analyse",
+    "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations":"Etes vous sûr de vouloir supprimer toutes les observations de ce Cycle ?",
+    "nocycleforthemoment":"No cycle for the moment !",
+    "deleteallobservationsfromthecycle":"Supprimer toutes les observations du cycle",
+    "groupedcycleanalysis":"Analyse groupée cycle",
+    "allinterpretationsofthiscyclewillbeerased":"Toutes les interprétations faites sur ce cycle seront effacées",
+    "cancelallanalysis":"Annuler toute l'analyse",
+    "anerrorhasoccurred":"Une erreur s'est produite",
+    "thereisonlyonecyclenoreturnpossible":"Il n'y a qu'un seul cycle : pas de renvoi possible",
+    "thereisnocyclenoreferralpossible":"There is no cycle: no referral possible",
+    "areyousureyouwanttoreturnthecycle":"Are you sure you want to return the cycle",
+    "to":"to",
+    "resend":"Resend",
+    "returncycle":"Return Cycle",
+    "summary":"Summary",
+    "analysis":"Analysis",
+    "allownotifications":"Allow Notifications",
+    "allow":"Allow",
+    "dontallow":"Don't Allow",
+    "ourappwouldliketosendnotifications":"Our app would like to send Notifications",
+    "icon_dry":"assets/icon_observation/sensation/sensation_S.png",
     "insert":"insert"
 }
