--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -58,7 +58,7 @@
     "jailulespoints":"I have read the above points and understand that this application will help me record my daily observations during my menstrual cycles, but is in no way sufficient on its own to prevent (or promote) pregnancy. I understand that if this were my goal, I would need to undergo in-depth training with an instructor specialising in natural birth control methods.",
 	"etape":"Step",
 	"principeutilisation":"Conditions of use",
-	"textinformation":"Kyklos, a cycle tracking app created in 2022 by doctors, is :<br>• usable by any woman<br>• specially adapted for pubescent or pre-pubescent girls<br>• is usable offline (data internal to the application)<br>• confidential: no link to any tracking site, server or database; does NOT disclose anydata to third parties without the user's knowledge*. N.B. For the greatest possibleconfidentiality in the digital sphere of this intimate health data, it is preferable to sendPDFs of cycles via Bluetooth or encrypted messaging, and to archive them on apersonal hard drive rather than in the Cloud.<br>• Free of charge<br>*with no source of revenue! Keep it on the stores with a donation, thank you!(<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a> \"help us\" tab).<br><br><u>Fundamentals:</u> Drs G.D., B.deN., A.J., and other, doctors and facilitators at CEPP/TeenSTAR<br>France<br><u>Design, layout and coordination:</u> A.J.<br><u>Illustrations</u>: Inès de Chefdebien (Paris)<br><u>Contact</u>: app@teenstar.fr<br><i>All rights reserved<i>",
+	"textinformation":"Kyklos, a cycle tracking app created in 2022 by doctors, is :<br>• usable by any woman<br>• specially adapted for pubescent or pre-pubescent girls<br>• is usable offline (data internal to the application)<br>• confidential: no link to any tracking site, server or database; does NOT disclose any data to third parties without the user's knowledge*. <br>N.B. For the greatest possible confidentiality in the digital sphere of this intimate health data, it is preferable to send PDFs of cycles via Bluetooth or encrypted messaging, and to archive them on a personal hard drive rather than in the Cloud.<br>• Free of charge<br>*with no source of revenue! Keep it on the stores with a donation, thank you!(<a href=\"https://www.teenstar.fr\">www.teenstar.fr</a> \"help us\" tab).<br><br><u>Fundamentals:</u> Drs G.D., B.deN., A.J., and other, doctors and facilitators at CEPP/TeenSTAR<br>France<br><u>Design, layout and coordination:</u> A.J.<br><u>Illustrations</u>: Inès de Chefdebien (Paris)<br><u>Contact</u>: app@teenstar.fr<br><i>All rights reserved<i>",
     "bienvenuesurkyklos": "Welcome to Kyklos",
 "settings": "Settings",
 "account": "Account",
@@ -97,8 +97,8 @@
 "date": "Date :",
 "today": "Today",
 "sensation": "SENSATION",
-"d_letter_in_icon": "D (letter in icon)",
-"dry_legend_icon_d": "Dry (legend icon D)",
+"d_letter_in_icon": "D",
+"dry_legend_icon_d": "Dry",
 "h": "H",
 "humid": "Humid",
 "w": "W",
@@ -235,7 +235,7 @@
 "mood": "Mood",
 "temperature": "Temperature",
 "event": "Event",
-"cycle_comments": "Cycle (numéro du cycle) comments",
+"cycle_comments": "Cycle comments",
 "day": "Day",
 "date": "Date",
 "comments": "Comments",
@@ -278,5 +278,25 @@
 "add_first_observation":"Add your first comment!",
 "no_history":"No history",
 "display_analyse":"Display analyse",
+"etes_vous_sur_de_vouloir_supprimer_toutes_les_observations":"Are you sure you want to delete all the comments from this Cycle ?",
+"nocycleforthemoment":"Aucun cycle pour le moment !",
+"deleteallobservationsfromthecycle":"Delete all observations from the cycle",
+"groupedcycleanalysis":"Grouped cycle analysis",
+"allinterpretationsofthiscyclewillbeerased":"All interpretations of this cycle will be erased",
+"cancelallanalysis":"Cancel all analysis",
+"anerrorhasoccurred":"An error has occurred",
+"thereisonlyonecyclenoreturnpossible":"There is only one cycle: no return possible",
+"thereisnocyclenoreferralpossible":"Il n'y a pas de cycle : pas de renvoi possible",
+"areyousureyouwanttoreturnthecycle":"Êtes-vous sûre de vouloir renvoyer le cycle",
+"to":"vers",
+"resend":"Renvoyer",
+"returncycle":"Renvoyer Cycle",
+"summary":"Résumé",
+"analysis":"Analyse",
+"allownotifications":"Autoriser les notifications",
+"allow":"Autoriser",
+"dontallow":"Ne pas autoriser",
+"ourappwouldliketosendnotifications":"Notre application souhaite envoyer des notifications",
+"icon_dry":"assets/icon_observation/sensation/sensation_D.png",
 "insert":"insert"
 }
