[1.3.2] Corrections de nombreux bugs

--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -1,8 +1,5 @@
 {
     "language":"English",
-    "@language":{
-        "description":"The current Language"
-    },
     "nomprojet":"Kyklos",
     "helloworld":"Hello World",
     "seconnecter":"Log in",
@@ -181,12 +178,12 @@
     "saturday": "Saturday",
     "sunday": "Sunday",
     "read": "notes,Read notes",
-    "mark_as_peak_day": "mark as peak day",
+    "mark_as_peak_day": "Mark as peak day",
     "change_colour": "Change colour",
     "mark_1": "Mark 1",
     "mark_2": "Mark 2",
     "mark_3": "Mark 3",
-    "delete": "Delete '?'",
+    "delete": "Delete",
     "modify_daily_observation": "Modify daily observation",
     "cancel_peak_day": "Cancel peak day",
     "cancel_colour": "Cancel colour",
@@ -251,9 +248,9 @@
     "enter_the_password":"Enter the password",
     "go_to":"Go to",
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually":"Please note that this date already exists in the previous cycle. You will have to delete the duplicate manually",
-    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Please note that a comment already exists for this date. Would you like to replace it ?",
+    "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Please note that an observation already exists for this date. Would you like to replace it ?",
     "replace":"Replace",
-    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Please note that the days of the previous cycle after the date of this observation will be carried over to this new cycle. Would you like to confirm?",
+    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Please note that the days of the previous cycle after the date of this observation will be carried over to this new cycle. Would you like to confirm ?",
     "reporting_observations":"Reporting observations",
     "notes_confidential":"Notes Confidential",
     "summary_analysis_of_cycle_":"Summary / Analysis of cycle ",
@@ -287,16 +284,17 @@
     "anerrorhasoccurred":"An error has occurred",
     "thereisonlyonecyclenoreturnpossible":"There is only one cycle: no return possible",
     "thereisnocyclenoreferralpossible":"Il n'y a pas de cycle : pas de renvoi possible",
-    "areyousureyouwanttoreturnthecycle":"Êtes-vous sûre de vouloir renvoyer le cycle",
-    "to":"vers",
-    "resend":"Renvoyer",
-    "returncycle":"Renvoyer Cycle",
-    "summary":"Résumé",
-    "analysis":"Analyse",
-    "allownotifications":"Autoriser les notifications",
-    "allow":"Autoriser",
-    "dontallow":"Ne pas autoriser",
-    "ourappwouldliketosendnotifications":"Notre application souhaite envoyer des notifications",
+    "areyousureyouwanttoreturnthecycle":"Are you sure you want to return the cycle",
+    "to":"to",
+    "resend":"Resend",
+    "returncycle":"Return Cycle",
+    "summary":"Summary",
+    "analysis":"Analysis",
+    "allownotifications":"Allow Notifications",
+    "allow":"Allow",
+    "dontallow":"Don't Allow",
+    "ourappwouldliketosendnotifications":"Our app would like to send Notifications",
     "icon_dry":"assets/icon_observation/sensation/sensation_D.png",
+    "this_date_already_exist_in_previous_cycle":"This date already exists in previous cycle. Would you like to confirm ?",
     "insert":"insert"
 }
