--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -178,12 +178,12 @@
     "saturday":"Samedi",
     "sunday":"Dimanche",
     "read":"notes,Lire les notes",
-    "mark_as_peak_day":"marquer comme jour sommet",
+    "mark_as_peak_day":"Marquer comme jour sommet",
     "change_colour":"Modifier la couleur",
     "mark_1":"Marquer 1",
     "mark_2":"Marquer 2",
     "mark_3":"Marquer 3",
-    "delete":"Effacer le ?",
+    "delete":"Effacer",
     "modify_daily_observation":"Modifier l'observation du jour",
     "cancel_peak_day":"Annuler sommet",
     "cancel_colour":"Annuler couleur",
@@ -250,7 +250,7 @@
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually":"Attention cette date existe déjà dans le cycle précédent. Vous devrez supprimer manuellement le doublon",
     "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Attention: une observation existe déjà pour cette date. voulez-vous la remplacer ?",
     "replace":"Remplacer",
-    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm?":"Attention les journées du Cycle précédant situées après la date de cette observation vont être reportées a ce nouveau cycle. Voulez vous confirmer ?",
+    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Attention les journées du Cycle précédant situées après la date de cette observation vont être reportées a ce nouveau cycle. Voulez vous confirmer ?",
     "reporting_observations":"Reporter les observations",
     "notes_confidential":"*Notes Confidentielle*",
     "summary_analysis_of_cycle_":"Résumé / Analyse du cycle",
@@ -284,16 +284,17 @@
     "anerrorhasoccurred":"Une erreur s'est produite",
     "thereisonlyonecyclenoreturnpossible":"Il n'y a qu'un seul cycle : pas de renvoi possible",
     "thereisnocyclenoreferralpossible":"There is no cycle: no referral possible",
-    "areyousureyouwanttoreturnthecycle":"Are you sure you want to return the cycle",
-    "to":"to",
-    "resend":"Resend",
-    "returncycle":"Return Cycle",
-    "summary":"Summary",
-    "analysis":"Analysis",
-    "allownotifications":"Allow Notifications",
-    "allow":"Allow",
-    "dontallow":"Don't Allow",
-    "ourappwouldliketosendnotifications":"Our app would like to send Notifications",
+    "areyousureyouwanttoreturnthecycle":"Êtes-vous sûre de vouloir renvoyer le cycle",
+    "to":"vers",
+    "resend":"Renvoyer",
+    "returncycle":"Renvoyer Cycle",
+    "summary":"Résumé",
+    "analysis":"Analyse",
+    "allownotifications":"Autoriser les notifications",
+    "allow":"Autoriser",
+    "dontallow":"Ne pas autoriser",
+    "ourappwouldliketosendnotifications":"Notre application souhaite envoyer des notifications",
     "icon_dry":"assets/icon_observation/sensation/sensation_S.png",
+    "this_date_already_exist_in_previous_cycle":"Cette date exite déjà dans le cycle précédant. Voulez vous confirmer ?",
     "insert":"insert"
 }
