[TeenSTAR] Correction de bugs

--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -171,6 +171,7 @@
     "event": "Event",
     "observation_of_the_day": "Observation of the day",
     "observation_of_d": "Observation of D ",
+    "monday": "Monday",
     "tuesday": "Tuesday",
     "wednesday": "Wednesday",
     "thursday": "Thursday",
@@ -202,7 +203,7 @@
     "analyse_group_cycle": "Analyse group Cycle ",
     "touch_the_lines_to_be_analysed": "Touch the lines to be analysed",
     "cancel": "Cancel",
-    "analyse": "Analyse",
+    "analyse": "Analysis",
     "observation": "observation",
     "change_colour": "Change colour",
     "mark_infertile": "Mark infertile",
@@ -275,10 +276,10 @@
     "add_first_observation":"Add your first comment!",
     "no_history":"No history",
     "display_analyse":"Display analyse",
-    "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations":"Are you sure you want to delete all the comments from this Cycle ?",
+    "etes_vous_sur_de_vouloir_supprimer_toutes_les_observations":"Are you sure you want to delete all the observations from this Cycle ?",
     "nocycleforthemoment":"Aucun cycle pour le moment !",
     "deleteallobservationsfromthecycle":"Delete all observations from the cycle",
-    "groupedcycleanalysis":"Grouped cycle analysis",
+    "groupedcycleanalysis":"Grouped analysis cycle",
     "allinterpretationsofthiscyclewillbeerased":"All interpretations of this cycle will be erased",
     "cancelallanalysis":"Cancel all analysis",
     "anerrorhasoccurred":"An error has occurred",
@@ -297,5 +298,7 @@
     "icon_dry":"assets/icon_observation/sensation/sensation_D.png",
     "this_date_already_exist_in_previous_cycle":"This date already exists in previous cycle. Would you like to confirm ?",
     "d_day":"D",
+    "premier_regle":"FP",
+    "vers": "to",
     "insert":"insert"
 }
