--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -171,6 +171,7 @@
     "event":"Evénement ",
     "observation_of_the_day":"Observation de la journée",
     "observation_of_d":"Observation du J ",
+    "monday": "Lundi",
     "tuesday":"Mardi",
     "wednesday":"Mercredi",
     "thursday":"Jeudi",
@@ -202,7 +203,7 @@
     "analyse_group_cycle":"Analyse groupée Cycle ",
     "touch_the_lines_to_be_analysed":"Toucher les lignes à analyser",
     "cancel":"Annuler",
-    "analyse":"Analyser",
+    "analyse":"Analyse",
     "observation": "observation",
     "change_colour":"Modifier couleur",
     "mark_infertile":"Marquer infertile",
@@ -250,7 +251,7 @@
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually":"Attention cette date existe déjà dans le cycle précédent. Vous devrez supprimer manuellement le doublon",
     "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Attention: une observation existe déjà pour cette date. voulez-vous la remplacer ?",
     "replace":"Remplacer",
-    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Attention les journées du Cycle précédant situées après la date de cette observation vont être reportées a ce nouveau cycle. Voulez vous confirmer ?",
+    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Attention les journées du Cycle précédent situées après la date de cette observation vont être reportées a ce nouveau cycle. Voulez vous confirmer ?",
     "reporting_observations":"Reporter les observations",
     "notes_confidential":"*Notes Confidentielle*",
     "summary_analysis_of_cycle_":"Résumé / Analyse du cycle",
@@ -295,7 +296,9 @@
     "dontallow":"Ne pas autoriser",
     "ourappwouldliketosendnotifications":"Notre application souhaite envoyer des notifications",
     "icon_dry":"assets/icon_observation/sensation/sensation_S.png",
-    "this_date_already_exist_in_previous_cycle":"Cette date exite déjà dans le cycle précédant. Voulez vous confirmer ?",
+    "this_date_already_exist_in_previous_cycle":"Cette date exite déjà dans le cycle précédent. Voulez vous confirmer ?",
     "d_day":"J",
+    "premier_regle":"PR",
+    "vers": "a",
     "insert":"insert"
 }
