--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -251,7 +251,7 @@
     "please_note_that_this_date_already_exists_in_the_previous_cycle_you_will_have_to_delete_the_duplicate_manually":"Attention cette date existe déjà dans le cycle précédent. Vous devrez supprimer manuellement le doublon",
     "please_note_that_a_comment_already_exists_for_this_date_would_you_like_to_replace_it":"Attention: une observation existe déjà pour cette date. voulez-vous la remplacer ?",
     "replace":"Remplacer",
-    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Attention les journées du Cycle précédent situées après la date de cette observation vont être reportées a ce nouveau cycle. Voulez vous confirmer ?",
+    "please_note_that_the_days_of_the_previous_cycle_after_the_date_of_this_observation_will_be_carried_over_to_this_new_cycle_would_you_like_to_confirm":"Attention les journées du Cycle précédent situées après la date de cette observation vont être reportées à ce nouveau cycle. Voulez vous confirmer ?",
     "reporting_observations":"Reporter les observations",
     "notes_confidential":"*Notes Confidentielle*",
     "summary_analysis_of_cycle_":"Résumé / Analyse du cycle",
