--- a/lib/presentation/core/_l10n/app_en.arb
+++ b/lib/presentation/core/_l10n/app_en.arb
@@ -239,7 +239,7 @@
     "comments": "Comments",
     "path_advanded_guide": "assets/html/guide_avance_en.html",
     "path_basic_guide": "assets/html/guide_de_base_en.html",
-    "path_guide_pdf": "assets/guide_en.pdf",
+    "path_guide_pdf": "assets/guide_complet/guide_en.pdf",
     "sky": "Sky",
     "pink": "Pink",
     "medication":"medication",
@@ -264,12 +264,14 @@
     "other_pain":"Other pain",
     "no_note":"No note",
     "confidential_notes":"Confidential notes",
-    "would_you_like_to_add_a_comment_for_the":"Would you like to add a comment for the",
+    "would_you_like_to_add_a_comment_for_the":"Would you like to add an observation for the",
     "add":"Add",
     "all_your_recordings_will_be_permanently_deleted":"All your recordings will be permanently deleted",
     "erase_all":"Erase all",
+    "notification" : "Notifications",
     "activate_notifications_to_receive_alerts_and_reminders":"Activate notifications to receive alerts and reminders",
     "notifications_are_scheduled":"Notifications are scheduled",
+    "notification_scheduled":"Scheduled notifications",
     "no_notification_scheduled":"No notification scheduled",
     "schedule_a_reminder":"Schedule a reminder",
     "cancel_all_reminders":"Cancel all reminders",
@@ -283,12 +285,12 @@
     "allinterpretationsofthiscyclewillbeerased":"All interpretations of this cycle will be erased",
     "cancelallanalysis":"Cancel all analysis",
     "anerrorhasoccurred":"An error has occurred",
-    "thereisonlyonecyclenoreturnpossible":"There is only one cycle: no return possible",
+    "thereisonlyonecyclenoreturnpossible":"There is only one cycle: no resend possible",
     "thereisnocyclenoreferralpossible":"Il n'y a pas de cycle : pas de renvoi possible",
-    "areyousureyouwanttoreturnthecycle":"Are you sure you want to return the cycle",
+    "areyousureyouwanttoreturnthecycle":"Are you sure you want to resend the cycle",
     "to":"to",
     "resend":"Resend",
-    "returncycle":"Return Cycle",
+    "returncycle":"Resend Cycle",
     "summary":"Summary",
     "analysis":"Analysis",
     "allownotifications":"Allow Notifications",
