--- a/lib/presentation/core/_l10n/app_fr.arb
+++ b/lib/presentation/core/_l10n/app_fr.arb
@@ -239,7 +239,7 @@
     "comments":"Commentaires",
     "path_advanded_guide": "assets/html/guide_avance_fr.html",
     "path_basic_guide": "assets/html/guide_de_base_fr.html",
-    "path_guide_pdf": "assets/guide.pdf",
+    "path_guide_pdf": "assets/guide_complet/guide_fr.pdf",
     "sky": "Ciel",
     "pink": "Corail",
     "medication":"medicament",
@@ -268,8 +268,10 @@
     "add":"Ajouter",
     "all_your_recordings_will_be_permanently_deleted":"Tous vos enregistrements seront définitivement effacés",
     "erase_all":"Tout effacer",
+    "notification" : "Notifications",
     "activate_notifications_to_receive_alerts_and_reminders":"Activer les notifications pour recevoir des alertes et des rappels",
     "notifications_are_scheduled":"Les notifications sont programmées",
+    "notification_scheduled":"Notifications programmées",
     "no_notification_scheduled":"Aucune notification programmée",
     "schedule_a_reminder":"Me programmer un rappel",
     "cancel_all_reminders":"Annuler tous les rappels",
